[gd_scene load_steps=5 format=3 uid="uid://dunhuxrgyvtne"]

[ext_resource type="Theme" uid="uid://qh5hw5je4dm8" path="res://assets/themes/menu1_theme.tres" id="1_2k2k4"]
[ext_resource type="Script" uid="uid://dhkol22m8innm" path="res://scenes/menus/settings/settings_menu.gd" id="1_blnbg"]
[ext_resource type="AudioStream" uid="uid://bx1hw08fg02ow" path="res://assets/sounds/Button_4.ogg" id="3_kq2y2"]
[ext_resource type="AudioStream" uid="uid://cnje2cyebrnvt" path="res://assets/sounds/Button_Mouseover.ogg" id="4_dx5pj"]

[node name="SettingsMenu" type="Control"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blnbg")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(800, 600)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_2k2k4")

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
current_tab = 0

[node name="Game" type="Control" parent="PanelContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="btnLoad" type="Button" parent="PanelContainer/TabContainer/Game"]
layout_mode = 0
offset_left = 270.0
offset_top = 100.0
offset_right = 510.0
offset_bottom = 180.0
text = "Load Game"

[node name="btnMainMenu" type="Button" parent="PanelContainer/TabContainer/Game"]
layout_mode = 0
offset_left = 270.0
offset_top = 200.0
offset_right = 510.0
offset_bottom = 280.0
text = "Quit to Main Menu"

[node name="btnQuit" type="Button" parent="PanelContainer/TabContainer/Game"]
layout_mode = 0
offset_left = 270.0
offset_top = 300.0
offset_right = 510.0
offset_bottom = 380.0
text = "Quit to  Desktop"

[node name="Keyboard" type="Control" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="Control" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="btnSave" type="Button" parent="PanelContainer/Panel"]
layout_mode = 0
offset_left = 640.0
offset_top = -80.0
offset_right = 770.0
offset_bottom = -20.0
text = "Save"

[node name="btnCancel" type="Button" parent="PanelContainer/Panel"]
layout_mode = 0
offset_left = 500.0
offset_top = -80.0
offset_right = 630.0
offset_bottom = -20.0
text = "Cancel"

[node name="lbVersion" type="Label" parent="PanelContainer/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = -50.0
offset_right = 109.0
offset_bottom = -22.0
text = "Version: "

[node name="Button4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kq2y2")

[node name="ButtonMouseover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dx5pj")

[connection signal="focus_entered" from="PanelContainer/TabContainer/Game/btnLoad" to="." method="_on_btn_load_focus_entered"]
[connection signal="pressed" from="PanelContainer/TabContainer/Game/btnLoad" to="." method="_on_btn_load_pressed"]
[connection signal="focus_entered" from="PanelContainer/TabContainer/Game/btnMainMenu" to="." method="_on_btn_main_menu_focus_entered"]
[connection signal="pressed" from="PanelContainer/TabContainer/Game/btnMainMenu" to="." method="_on_btn_main_menu_pressed"]
[connection signal="focus_entered" from="PanelContainer/TabContainer/Game/btnQuit" to="." method="_on_btn_quit_focus_entered"]
[connection signal="pressed" from="PanelContainer/TabContainer/Game/btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="focus_entered" from="PanelContainer/Panel/btnSave" to="." method="_on_btn_save_focus_entered"]
[connection signal="pressed" from="PanelContainer/Panel/btnSave" to="." method="_on_btn_save_pressed"]
[connection signal="focus_entered" from="PanelContainer/Panel/btnCancel" to="." method="_on_btn_cancel_focus_entered"]
[connection signal="pressed" from="PanelContainer/Panel/btnCancel" to="." method="_on_btn_cancel_pressed"]
